--- a/node/node/Dockerfile
+++ b/node/node/Dockerfile
@@ -1,3 +1,4 @@
 FROM wener/base
 
-RUN apk add --no-cache nodejs yarn npm
+# latest npm is v7 - alpine 3.13 is v6
+RUN apk add --no-cache nodejs yarn npm && npm install -g npm
