--- a/asterisk/asterisk/Dockerfile
+++ b/asterisk/asterisk/Dockerfile
@@ -1,8 +1,4 @@
-FROM wener/base:bash
-
-# add repo.wener.me to install newer version
-RUN (cd /etc/apk/keys; curl -LO https://repo.wener.me/alpine/wenermail@gmail.com-5dc8c7cd.rsa.pub ) && \
-    echo https://repo.wener.me/alpine/v$ALPINE_VERSION/community >> /etc/apk/repositories
+FROM wener/base
 
 RUN apk add --no-cache asterisk openssl && \
     apk add --no-cache asterisk-{curl,dahdi,pgsql,sample-config,sounds-en,sounds-moh,srtp}
@@ -10,6 +6,7 @@ RUN apk add --no-cache asterisk openssl && \
 # HTTP HTTPS AMI
 EXPOSE 8088 8089 5038
 # SIP signaling RTP audio
-EXPOSE 5060-5070/udp 8766-35000/udp
+EXPOSE 5060-5070/udp
+# 8766-35000/udp
 # IAX2
 EXPOSE 4568 4568/udp
