--- a/gitlab-runner/dev/Dockerfile
+++ b/gitlab-runner/dev/Dockerfile
@@ -1,4 +1,6 @@
 FROM wener/gitlab-runner
 
 # Golang + Web dev
-RUN apk add --no-cache nodejs yarn npm go
+# Go 1.16 NPMv7
+RUN apk add --no-cache nodejs yarn npm && npm install -g npm \
+  && apk add go -X https://mirrors.aliyun.com/alpine/edge/community
