add base:armhf-3.1; go:armhf

--- a/go/armhf/Dockerfile
+++ b/go/armhf/Dockerfile
@@ -1,4 +1,4 @@
-FROM  wener/base
+FROM  wener/base:armhf
 
 # Install newer version
 RUN apk add --no-cache go -X https://mirrors.sjtug.sjtu.edu.cn/alpine/edge/community/ \
