--- a/base/armhf/Dockerfile
+++ b/base/armhf/Dockerfile
@@ -11,19 +11,30 @@ RUN QEMU_ARCH=${QEMU_ARCH:-$ARCH} \
     && cp /etc/apk/repositories target-root/etc/apk/repositories
 
 FROM scratch
+
+ARG ALPINE_VERSION=3.13
+ARG ALPINE_MIRROR=https://mirrors.sjtug.sjtu.edu.cn/alpine
+ENV ALPINE_VERSION=${ALPINE_VERSION}
+ENV ALPINE_MIRROR=${ALPINE_MIRROR}
+
 LABEL maintainer="wener@wener.me"\
     org.label-schema.name="base:armhf" \
     org.label-schema.vendor="Wener" \
     org.label-schema.description="Alpine Linux armhf based on armhf qemu emulator" \
     org.label-schema.url="https://github.com/wenerme/dockerfiles" \
     org.label-schema.vcs-url="https://github.com/wenerme/dockerfiles" \
-    org.label-schema.version="3.10" \
+    org.label-schema.version="3.13" \
     org.label-schema.license="MIT"
 
 ENV ALPINE_ARCH=armhf
 COPY --from=builder /root/target-root .
 
-RUN apk add --no-cache curl busybox file nano libc6-compat
+RUN echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/main > /etc/apk/repositories; \
+    echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/community >> /etc/apk/repositories
 
-CMD [ "/usr/bin/qemu-arm", "/bin/busybox", "ash" ]
+# Base tools
+RUN apk add --no-cache curl busybox-extras file nano libc6-compat gcompat bash
+SHELL [ "/bin/bash", "-c"]
+
+CMD [ "/usr/bin/qemu-arm", "/bin/bash" ]
 
