--- a/php/php/Dockerfile
+++ b/php/php/Dockerfile
@@ -11,7 +11,7 @@ RUN apk --no-cache add php7 &&\
 #    rm -rf /tmp/pear ~/.pearrc
 
 # https://github.com/docker-library/php/issues/240
-RUN apk add --no-cache --repository http://mirrors.aliyun.com/alpine/edge/testing gnu-libiconv
+RUN apk add --no-cache gnu-libiconv
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
 # www-data 组已经存在
