--- a/go/go/Dockerfile
+++ b/go/go/Dockerfile
@@ -1,6 +1,4 @@
 FROM  wener/base
 
-# Install newer version
-RUN apk add --no-cache go -X https://mirrors.sjtug.sjtu.edu.cn/alpine/edge/community/ \
-    && apk add --no-cache musl-dev git make gcc pkgconf
+RUN apk add --no-cache go musl-dev git make gcc pkgconf
 RUN mkdir /root/go
