--- a/nginx/nginx/Dockerfile
+++ b/nginx/nginx/Dockerfile
@@ -1,8 +1,9 @@
-FROM        wener/base:bash
+FROM wener/base:bash
 
 RUN apk --no-cache add nginx nginx-mod-stream && \
     chown -R nginx:www-data /var/lib/nginx && \
     mkdir -p /run/nginx/
 
 EXPOSE 80 443
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/usr/sbin/nginx"]
+CMD ["-g", "daemon off;"]
