--- a/frp/frp/Dockerfile
+++ b/frp/frp/Dockerfile
@@ -1,4 +1,5 @@
 FROM wener/base
 
-RUN apk add --no-cache -X https://mirrors.sjtug.sjtu.edu.cn/alpine/edge/testing frp
-RUN apk add --no-cache inotify-tools
+RUN apk add --no-cache -X https://mirrors.sjtug.sjtu.edu.cn/alpine/edge/community frp \
+    # inotify-tools help reload frp
+    && apk add --no-cache inotify-tools
