--- a/gitlab-runner/dev/Dockerfile
+++ b/gitlab-runner/dev/Dockerfile
@@ -1,6 +1,6 @@
 FROM wener/gitlab-runner
 
 # Golang + Web dev
-# Go 1.16 NPMv7
-RUN apk add --no-cache nodejs yarn npm && npm install -g npm \
-  && apk add go -X https://mirrors.aliyun.com/alpine/edge/community
+# if need newer version, use go install
+RUN apk add --no-cache nodejs yarn npm go && \
+    npm install -g npm && npm cache clean --force
