--- a/node/node/Dockerfile
+++ b/node/node/Dockerfile
@@ -1,3 +1,3 @@
 FROM wener/base
 
-RUN apk add --no-cache nodejs yarn npm && npm install -g npm
+RUN apk add --no-cache nodejs yarn npm make && npm install -g npm
