--- a/php/root/etc/nginx/http.d/default.conf
+++ b/php/root/etc/nginx/http.d/default.conf
@@ -29,7 +29,7 @@ server {
 
         include        fastcgi_params;
 
-        access_log  logs/php.log  main;
+        # access_log  logs/php.log  main;
     }
 
     location ~ /\.ht {
