add xvfb, chromium

--- a/app/ssh/Dockerfile
+++ b/app/ssh/Dockerfile
@@ -1,9 +1,9 @@
-FROM wener/base:app
+FROM wener/app
 
 # sshd for op
 # python for manage like ansible
 RUN apk add --no-cache openssh python3 \
     # start ssh for server
-    && rc-update add sshd \
+    && rc-update add sshd
 
 EXPOSE 22
