--- a/nginx/nginx/Dockerfile
+++ b/nginx/nginx/Dockerfile
@@ -3,6 +3,7 @@ FROM wener/base
 RUN apk --no-cache add nginx nginx-mod-stream && \
     chown -R nginx:www-data /var/lib/nginx && \
     mkdir -p /run/nginx/
+COPY root /
 
 EXPOSE 80 443
 ENTRYPOINT ["/usr/sbin/nginx"]
