--- a/chromium/Dockerfile
+++ b/chromium/Dockerfile
@@ -1,6 +1,7 @@
 FROM wener/xvfb
 
-RUN apk add --no-cache \
+RUN --mount=type=cache,target=/etc/apk/cache \
+      apk add \
       nss \
       freetype \
       harfbuzz \
@@ -9,6 +10,8 @@ RUN apk add --no-cache \
       font-noto-cjk \
       chromium
 
+ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
 
 # 因为是安装在 xvfb 里 - 所以不能 nonroot
 #RUN addgroup -S app && adduser -S -G app app \
@@ -18,5 +21,3 @@ RUN apk add --no-cache \
 #
 #USER app
 # USER admin
-# ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
-# ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
