--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[Makefile]
+[{Makefile,*.mk}]
 indent_style = tab
 indent_size = 4
