--- a/base/base/Dockerfile
+++ b/base/base/Dockerfile
@@ -1,13 +1,17 @@
-FROM alpine as builder
-ARG ALPINE_VERSION=3.16
+FROM alpine AS builder
+ARG ALPINE_VERSION=3.17
+ARG ALPINE_MIRROR=https://mirrors.sjtug.sjtu.edu.cn/alpine
 
 # Change the version to upgrade the base image
-RUN mkdir /rootfs && cd /rootfs && \
-    apk -X https://mirrors.sjtug.sjtu.edu.cn/alpine/v${ALPINE_VERSION}/main --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
+RUN --mount=type=cache,target=/etc/apk/cache mkdir /rootfs && cd /rootfs && \
+    apk -X ${ALPINE_MIRROR}/v${ALPINE_VERSION}/main --allow-untrusted --root /rootfs --initdb add alpine-base
+RUN echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/main > /rootfs/etc/apk/repositories; \
+    echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/community >> /rootfs/etc/apk/repositories
+RUN --mount=type=cache,target=/etc/apk/cache apk add --root /rootfs --no-cache curl busybox-extras file nano libc6-compat gcompat bash
 
 FROM scratch
 
-ARG ALPINE_VERSION=3.16
+ARG ALPINE_VERSION=3.17
 ARG ALPINE_MIRROR=https://mirrors.sjtug.sjtu.edu.cn/alpine
 ENV ALPINE_VERSION=${ALPINE_VERSION}
 ENV ALPINE_MIRROR=${ALPINE_MIRROR}
@@ -22,13 +26,8 @@ LABEL maintainer="wener@wener.me" \
     org.label-schema.license="MIT"
 
 COPY --from=builder /rootfs /
-RUN echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/main > /etc/apk/repositories; \
-    echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/community >> /etc/apk/repositories
-
-# Base tools
-RUN apk add --no-cache curl busybox-extras file nano libc6-compat gcompat bash
 SHELL [ "/bin/bash", "-c"]
 
-COPY root /
+COPY rootfs /
 
-CMD ["/bin/bash"]
+CMD ["/bin/bash","-l"]
