add wener/docker; update caddy

--- a/caddy/caddy/Dockerfile
+++ b/caddy/caddy/Dockerfile
@@ -1,35 +1,9 @@
-#
-# Builder
-#
-FROM abiosoft/caddy:builder as builder
-
-ARG version="0.11.1"
-ARG plugins="git,pdns,rfc2136"
-
-RUN VERSION=${version} PLUGINS=${plugins} /bin/sh /usr/bin/builder.sh
-
-#
-# Final stage
-#
 FROM wener/base
 LABEL org.label-schema.name="caddy" \
     org.label-schema.description="Caddy based on Alpine Linux"
 
-RUN apk add --no-cache openssh-client git
-
-# install caddy
-COPY --from=builder /install/caddy /usr/bin/caddy
-
-# validate install
-RUN /usr/bin/caddy -version
-RUN /usr/bin/caddy -plugins
-
+RUN apk add --no-cache caddy
+COPY rootfs /
 EXPOSE 80 443 2015
-VOLUME /root/.caddy /srv
-WORKDIR /srv
 
-COPY Caddyfile /etc/Caddyfile
-COPY index.html /srv/index.html
-
-ENTRYPOINT ["/usr/bin/caddy"]
-CMD ["--conf", "/etc/Caddyfile", "--log", "stdout"]
+CMD ["/usr/sbin/caddy","run","--adapter","caddyfile","--config","/etc/caddy/Caddyfile"]
