--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM wener/base
 
-RUN apk add --no-cache docker git make docker-cli-buildx  \
-    && docker buildx use default  \
-    && docker buildx install
+RUN apk add --no-cache docker git make docker-cli-buildx
+RUN docker buildx install
+#    && docker buildx use default \
+#    && docker buildx install
