build ma openrc, app, fix coding-net:worker

--- a/app/Makefile
+++ b/app/Makefile
@@ -7,3 +7,6 @@ app:
 	@printf Building $(COLOR_INFO) "app"
 	docker buildx build --cache-from=wener/cache:app_app --cache-to=wener/cache:app_app --load -t wener/app app
 	docker push wener/app
+
+ma:
+	docker buildx build --push --platform linux/arm64/v8,linux/amd64 --tag wener/app:latest app
