--- a/base/openrc/Dockerfile
+++ b/base/openrc/Dockerfile
@@ -1,4 +1,5 @@
-FROM wener/base
+ARG RELEASE_VERSION
+FROM wener/base:${RELEASE_VERSION}
 
 # https://github.com/dockage/alpine/blob/master/3.10/openrc/Dockerfile
 RUN apk add --no-cache openrc su-exec ca-certificates wait4ports \
