--- a/node/node/Dockerfile
+++ b/node/node/Dockerfile
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1
+
 FROM wener/base
 
-RUN apk add --no-cache nodejs yarn npm make && npm install -g npm && npm cache clean --force
+RUN apk add --no-cache nodejs yarn npm make && npm install -g npm pnpm && npm cache clean --force
