--- a/node/docker/Dockerfile
+++ b/node/docker/Dockerfile
@@ -8,5 +8,7 @@ RUN apk add --no-cache docker docker-cli-buildx curl nano \
       # + 200MB
       python3 make gcc g++ alpine-sdk \
       # dev
-      git
-RUN docker buildx install
+      git jq coreutils findutils util-linux sed grep
+
+# buildx -> build
+# RUN docker buildx install
