bake php:7; php7 add sodiuml add java:8-ui

--- a/php/7-composer/Dockerfile
+++ b/php/7-composer/Dockerfile
@@ -1,3 +1,5 @@
+# syntax=docker/dockerfile:1
+
 FROM wener/php:7
 
 # 使用中国镜像安装
@@ -6,5 +8,5 @@ RUN php -r "copy('https://install.phpcomposer.com/installer', 'composer-setup.ph
     php -r "unlink('composer-setup.php');" && \
     mv composer.phar /usr/local/bin/composer
 
-# 使用中国镜像
-RUN composer config -g repo.packagist composer https://packagist.phpcomposer.com
+# https://repo.packagist.org/mirrors
+RUN composer config -g repos.packagist composer https://packagist.pages.dev
