--- a/php/7/Dockerfile
+++ b/php/7/Dockerfile
@@ -3,7 +3,9 @@ FROM wener/nginx
 RUN apk --no-cache add -X https://mirrors.sjtug.sjtu.edu.cn/alpine/edge/testing  \
     php7 \
     # Base package exclude cgi,litespeed,apache2,doc
-    php7-{bcmath,bz2,calendar,common,ctype,curl,dev,dba,dom,embed,enchant,exif,fileinfo,fpm,ftp,gd,gettext,gmp,iconv,imap,intl,json,ldap,mbstring,mcrypt,mysqli,mysqlnd,odbc,opcache,openssl,pcntl,pdo,pdo_dblib,pdo_mysql,pdo_odbc,pdo_pgsql,pdo_sqlite,pear,pgsql,phar,phpdbg,posix,pspell,session,shmop,simplexml,snmp,soap,sockets,sodium,sqlite3,sysvmsg,sysvsem,sysvshm,tidy,tokenizer,xml,xmlreader,xmlrpc,xmlwriter,xsl,zip,zlib}
+    php7-{bcmath,bz2,calendar,common,ctype,curl,dev,dba,dom,embed,enchant,exif,fileinfo,fpm,ftp,gd,gettext,gmp,iconv,imap,intl,json,ldap,mbstring,mcrypt,mysqli,mysqlnd,odbc,opcache,openssl,pcntl,pdo,pdo_dblib,pdo_mysql,pdo_odbc,pdo_pgsql,pdo_sqlite,pear,pgsql,phar,phpdbg,posix,pspell,session,shmop,simplexml,snmp,soap,sockets,sodium,sqlite3,sysvmsg,sysvsem,sysvshm,tidy,tokenizer,xml,xmlreader,xmlrpc,xmlwriter,xsl,zip,zlib} \
+    # https://pkgs.alpinelinux.org/packages?name=php7-pecl-*&arch=x86_64
+    php7-pecl-{redis,yaml,uuid,oauth,protobuf,igbinary,psr,zstd}
 
 RUN ln -s $(which php7) /usr/bin/php
 
