add jenkins:agent, ubuntu

--- a/ubuntu/ubuntu/Dockerfile
+++ b/ubuntu/ubuntu/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:xenial
+ARG VERSION
+# ARG VERSION_CODENAME
+FROM ubuntu:$VERSION
 
 LABEL maintainer="wener@wener.me"\
     org.label-schema.name="ubuntu" \
@@ -6,27 +8,9 @@ LABEL maintainer="wener@wener.me"\
     org.label-schema.description="Ubuntu with Chinese mirror" \
     org.label-schema.url="https://github.com/wenerme/dockerfiles" \
     org.label-schema.vcs-url="https://github.com/wenerme/dockerfiles" \
-    org.label-schema.version="3.7" \
     org.label-schema.license="MIT"
 
-# Use aliyun ubuntu mirrors to replace original sources.list
-RUN . /etc/os-release && \
-    echo "# Use Aliyun ubuntu mirror \n\
-deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-security main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-updates main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-proposed main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-backports main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-security main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-updates main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-proposed main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-backports main restricted universe multiverse \n" \
-    | tee /etc/apt/sources.list > /dev/null
-# Prepend instead of replace, first update is very slow!
-#    | cat - /etc/apt/sources.list | tee /etc/apt/sources.list > /dev/null
+COPY setup-image.sh /
+RUN sh setup-image.sh
 
-RUN apt-get update && apt-get install -y \
-    nano \
-    && rm -rf /var/lib/apt/lists/*
 COPY root /
